--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "whatwg-fetch": "^1.0.0",
     "youtube-api-search": "0.0.5"
   }
 }
